@@ -29,6 +29,8 @@ git-annex (5.20140128) UNRELEASED; urgency=medium
   * Windows: Fix deletion of repositories by test suite and webapp.
   * Windows: Test suite 100% passes again.
   * Windows: Fix bug in symlink calculation code.
+  * Fix initremote with encryption=pubkey to work with S3, glacier, webdav,
+    and external special remotes.
 
  -- Joey Hess <joeyh@debian.org>  Tue, 28 Jan 2014 13:57:19 -0400
 
